Add protobuf stubs

--- a/analyzers/src/SonarAnalyzer.CSharp/SonarAnalyzer.CSharp.csproj
+++ b/analyzers/src/SonarAnalyzer.CSharp/SonarAnalyzer.CSharp.csproj
@@ -49,7 +49,7 @@
 
   <Target Name="CopyBinaries" AfterTargets="Build" DependsOnTargets="SignDlls">
     <ItemGroup>
-      <BinariesToCopy Include="$(OutputPath)Google.Protobuf.dll" />
+      <!--<BinariesToCopy Include="$(OutputPath)Google.Protobuf.dll" />-->
       <BinariesToCopy Include="$(OutputPath)SonarAnalyzer.dll" />
       <BinariesToCopy Include="$(OutputPath)SonarAnalyzer.CFG.dll" />
       <BinariesToCopy Include="$(OutputPath)SonarAnalyzer.CSharp.dll" />
